<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/cancel_button"
            android:src="@drawable/ic_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/saveButton" />


        <ImageView
            android:id="@+id/imageDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_icon"
            android:padding="12dp"
            android:src="@drawable/ic_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextTitle" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/write_your_note_here"
            android:inputType="textMultiLine"
            android:maxLines="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageDescription"
            app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

        <ImageView
            android:id="@+id/imageClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/all_day_icon"
            android:padding="12dp"
            android:src="@drawable/ic_clock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextDescription" />

        <TextView
            android:id="@+id/allDayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_day"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/imageClock"
            app:layout_constraintStart_toEndOf="@id/imageClock"
            app:layout_constraintTop_toTopOf="@id/imageClock" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/allDaySwitchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextDescription" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tue_mar_15_2022"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/allDayText"
            app:layout_constraintTop_toBottomOf="@id/allDayText" />

        <TextView
            android:id="@+id/hourText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_13_30"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/allDaySwitchButton"
            app:layout_constraintStart_toStartOf="@+id/allDaySwitchButton"
            app:layout_constraintTop_toBottomOf="@+id/allDaySwitchButton" />

        <ImageView
            android:id="@+id/imageReplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_replay_icon"
            android:padding="12dp"
            android:src="@drawable/ic_replay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateText" />

        <TextView
            android:id="@+id/replayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/does_not_repeat"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/imageReplay"
            app:layout_constraintStart_toEndOf="@id/imageReplay"
            app:layout_constraintTop_toTopOf="@id/imageReplay" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/replaySwitchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hourText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>